avoid stretch in left column image

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -57,11 +57,16 @@ header ul {
     width: 70%;
     margin-right: 1.5%;
 }
+.left-column div {
+  height: 275px;
+  width: 90%;
+  overflow: hidden;
+}
 .left-column img {
   border: 20px solid white;
   border-bottom: 10px;
-  height: 275px;
-  width: 90%;
+  height: 20%;
+  /* width: 90%; */
 }
 .right-column {
     float: left;
